--- a/yaml.ini
+++ b/yaml.ini
@@ -9,7 +9,7 @@ surge_ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cl
 surge_ruleset=DIRECT,[]GEOIP,CN
 surge_ruleset=其他,[]FINAL
 
-custom_proxy_group=香港`(香港)
+custom_proxy_group=香港`select`(香港)
 custom_proxy_group=手动`select`.*
 custom_proxy_group=自动`url-test`.*`http://www.gstatic.com/generate_204`300
 custom_proxy_group=代理`select`[]香港`[]手动`[]自动
