--- a/yaml.ini
+++ b/yaml.ini
@@ -9,9 +9,10 @@ surge_ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cl
 surge_ruleset=DIRECT,[]GEOIP,CN
 surge_ruleset=其他,[]FINAL
 
+custom_proxy_group=香港`select`.(HK-1|香港-0)
 custom_proxy_group=手动`select`.*
 custom_proxy_group=自动`url-test`.*`http://www.gstatic.com/generate_204`300
-custom_proxy_group=代理`select`[]手动`[]自动
+custom_proxy_group=代理`select`[]香港`[]手动`[]自动
 custom_proxy_group=苹果`select`[]DIRECT`[]代理
 custom_proxy_group=微软`select`[]DIRECT`[]代理
 custom_proxy_group=其他`select`[]DIRECT`[]代理
