--- a/yaml.ini
+++ b/yaml.ini
@@ -1,23 +1,25 @@
-surge_ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+surge_ruleset=本地,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 surge_ruleset=苹果,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 surge_ruleset=微软,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
-surge_ruleset=REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
-surge_ruleset=REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-surge_ruleset=代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
-surge_ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-surge_ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-surge_ruleset=DIRECT,[]GEOIP,CN
+surge_ruleset=广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+surge_ruleset=广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyList.list
+surge_ruleset=广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
+surge_ruleset=广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
+surge_ruleset=广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
+surge_ruleset=国外,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+surge_ruleset=国内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+surge_ruleset=国内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 surge_ruleset=其他,[]FINAL
 
 custom_proxy_group=香港`select`.(HK-|香港0)
-custom_proxy_group=台湾`select`.(TW-|台湾0)
 custom_proxy_group=美国`select`.(US-|美国0)
-custom_proxy_group=手动`select`.*
-custom_proxy_group=自动`url-test`.*`http://www.gstatic.com/generate_204`300
-custom_proxy_group=代理`select`[]香港`[]台湾`[]美国`[]手动`[]自动
-custom_proxy_group=苹果`select`[]DIRECT`[]代理
-custom_proxy_group=微软`select`[]DIRECT`[]代理
-custom_proxy_group=其他`select`[]DIRECT`[]代理
+custom_proxy_group=全部`select`.*
+custom_proxy_group=延迟`url-test`.*`http://www.gstatic.com/generate_204`300
+custom_proxy_group=代理`select`[]香港`[]美国`[]全部`[]延迟
+custom_proxy_group=本地`select`[]DIRECT`[]代理`[]REJECT
+custom_proxy_group=苹果`select`[]DIRECT`[]代理`[]REJECT
+custom_proxy_group=微软`select`[]代理`[]DIRECT`[]REJECT
+custom_proxy_group=其他`select`[]代理`[]DIRECT`[]REJECT
 
 enable_rule_generator=true
 overwrite_original_rules=true
