--- a/yaml.ini
+++ b/yaml.ini
@@ -19,6 +19,9 @@ custom_proxy_group=代理`select`[]香港`[]美国`[]全部`[]延迟
 custom_proxy_group=本地`select`[]DIRECT`[]代理`[]REJECT
 custom_proxy_group=苹果`select`[]DIRECT`[]代理`[]REJECT
 custom_proxy_group=微软`select`[]代理`[]DIRECT`[]REJECT
+custom_proxy_group=广告`select`[]REJECT`[]代理`[]DIRECT
+custom_proxy_group=国外`select`[]代理`[]DIRECT`[]REJECT
+custom_proxy_group=国内`select`[]DIRECT`[]代理`[]REJECT
 custom_proxy_group=其他`select`[]代理`[]DIRECT`[]REJECT
 
 enable_rule_generator=true
