--- a/yaml.ini
+++ b/yaml.ini
@@ -11,16 +11,16 @@ surge_ruleset=🎈国内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/maste
 surge_ruleset=🎈国内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 surge_ruleset=🎈其他,[]FINAL
 
-custom_proxy_group=🏁香港`select`.(HK-|香港0)
-custom_proxy_group=🏁美国`select`.(US-|美国0)
-custom_proxy_group=🏁全部`select`.*
-custom_proxy_group=🏁延迟`url-test`.*`http://www.gstatic.com/generate_204`300
-custom_proxy_group=🌀代理`select`[]🏁香港`[]🏁美国`[]🏁全部`[]🏁延迟
+custom_proxy_group=🦠香港`select`.(香港)
+custom_proxy_group=🦠美国`select`.(美国)
+custom_proxy_group=🦠全部`select`.*
+custom_proxy_group=🦠延迟`url-test`.*`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🌀代理`select`[]🦠香港`[]🦠美国`[]🦠全部`[]🦠延迟
 custom_proxy_group=🌀直连`select`[]DIRECT
 custom_proxy_group=🌀拒绝`select`[]REJECT
 custom_proxy_group=🎈本地`select`[]🌀直连`[]🌀代理
 custom_proxy_group=🎈苹果`select`[]🌀直连`[]🌀代理
-custom_proxy_group=🎈微软`select`[]🌀拒绝`[]🌀直连
+custom_proxy_group=🎈微软`select`[]🌀代理`[]🌀直连
 custom_proxy_group=🎈广告`select`[]🌀拒绝`[]🌀直连
 custom_proxy_group=🎈国外`select`[]🌀代理`[]🌀直连
 custom_proxy_group=🎈国内`select`[]🌀直连`[]🌀代理
