--- a/yaml.ini
+++ b/yaml.ini
@@ -14,15 +14,14 @@ surge_ruleset=其他,[]FINAL
 custom_proxy_group=香港`select`.(香港)
 custom_proxy_group=美国`select`.(美国)
 custom_proxy_group=全部`select`.*
-custom_proxy_group=延迟`url-test`.*`http://www.gstatic.com/generate_204`300
-custom_proxy_group=PROXY`select`[]香港`[]美国`[]全部`[]延迟
-custom_proxy_group=本地`select`[]DIRECT`[]PROXY
-custom_proxy_group=苹果`select`[]DIRECT`[]PROXY
-custom_proxy_group=微软`select`[]PROXY`[]DIRECT
+custom_proxy_group=代理`select`[]香港`[]美国`[]全部
+custom_proxy_group=本地`select`[]DIRECT`[]代理
+custom_proxy_group=苹果`select`[]DIRECT`[]代理
+custom_proxy_group=微软`select`[]代理`[]DIRECT
 custom_proxy_group=广告`select`[]REJECT`[]DIRECT
-custom_proxy_group=国外`select`[]PROXY`[]DIRECT
-custom_proxy_group=国内`select`[]DIRECT`[]PROXY
-custom_proxy_group=其他`select`[]PROXY`[]DIRECT
+custom_proxy_group=国外`select`[]代理`[]DIRECT
+custom_proxy_group=国内`select`[]DIRECT`[]代理
+custom_proxy_group=其他`select`[]DIRECT`[]代理
 
 enable_rule_generator=true
 overwrite_original_rules=true
