--- a/yaml.ini
+++ b/yaml.ini
@@ -17,7 +17,7 @@ custom_proxy_group=微软`select`[]代理`[]DIRECT
 custom_proxy_group=苹果`select`[]DIRECT`[]代理
 custom_proxy_group=国外`select`[]代理`[]DIRECT
 custom_proxy_group=国内`select`[]DIRECT`[]代理
-custom_proxy_group=其他`select`[]DIRECT`[]代理
+custom_proxy_group=其他`select`[]代理`[]DIRECT
 
 enable_rule_generator=true
 overwrite_original_rules=true
