--- a/yaml.ini
+++ b/yaml.ini
@@ -10,8 +10,7 @@ surge_ruleset=其他,[]FINAL
 
 custom_proxy_group=香港`select`.(香港)
 custom_proxy_group=美国`select`.(美国)
-custom_proxy_group=全部`select`.*
-custom_proxy_group=代理`select`[]香港`[]美国`[]全部
+custom_proxy_group=代理`select`[]香港`[]美国`.*
 custom_proxy_group=广告`select`[]REJECT`[]DIRECT
 custom_proxy_group=微软`select`[]代理`[]DIRECT
 custom_proxy_group=苹果`select`[]DIRECT`[]代理
