--- a/yaml.ini
+++ b/yaml.ini
@@ -7,7 +7,7 @@ surge_ruleset=其他,[]FINAL
 
 custom_proxy_group=香港`select`.(香港)
 custom_proxy_group=美国`select`.(美国)
-custom_proxy_group=代理`select`[]香港`[]美国`[].(日本)
+custom_proxy_group=代理`select`[]香港`[]美国`[].(JP)
 custom_proxy_group=苹果`select`[]DIRECT`[]代理
 custom_proxy_group=微软`select`[]代理`[]DIRECT
 custom_proxy_group=国内`select`[]DIRECT`[]代理
