--- a/yaml.ini
+++ b/yaml.ini
@@ -5,14 +5,12 @@ surge_ruleset=国内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cl
 surge_ruleset=国外,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 surge_ruleset=其他,[]FINAL
 
-custom_proxy_group=香港`select`.(香港)
-custom_proxy_group=美国`select`.(美国)
-custom_proxy_group=代理`select`[]香港`[]美国`[].(日本)
+custom_proxy_group=代理`select`.*
 custom_proxy_group=苹果`select`[]DIRECT`[]代理
 custom_proxy_group=微软`select`[]代理`[]DIRECT
 custom_proxy_group=国内`select`[]DIRECT`[]代理
 custom_proxy_group=国外`select`[]代理`[]DIRECT
-custom_proxy_group=其他`select`[]DIRECT`[]代理
+custom_proxy_group=最终`select`[]DIRECT`[]代理
 
 enable_rule_generator=true
 overwrite_original_rules=true
