--- a/yaml.ini
+++ b/yaml.ini
@@ -3,7 +3,7 @@ surge_ruleset=微软,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cl
 surge_ruleset=国内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 surge_ruleset=国内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 surge_ruleset=国外,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
-surge_ruleset=其他,[]FINAL
+surge_ruleset=最终,[]FINAL
 
 custom_proxy_group=代理`select`.*
 custom_proxy_group=苹果`select`[]DIRECT`[]代理
