--- a/yaml.ini
+++ b/yaml.ini
@@ -7,7 +7,7 @@ surge_ruleset=最终,[]FINAL
 
 custom_proxy_group=代理`select`.*
 custom_proxy_group=苹果`select`[]DIRECT`[]代理
-custom_proxy_group=微软`select`[]代理`[]DIRECT
+custom_proxy_group=微软`select`[]DIRECT`[]代理
 custom_proxy_group=国内`select`[]DIRECT`[]代理
 custom_proxy_group=国外`select`[]代理`[]DIRECT
 custom_proxy_group=最终`select`[]DIRECT`[]代理
