--- a/yaml.ini
+++ b/yaml.ini
@@ -6,8 +6,8 @@ surge_ruleset=国外,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cl
 surge_ruleset=最终,[]FINAL
 
 
-custom_proxy_group=香港`url-test`.（香港）`http://www.gstatic.com/generate_204`300
-custom_proxy_group=美国`url-test`.（美国）`http://www.gstatic.com/generate_204`300
+custom_proxy_group=香港`url-test`.(香港0)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=美国`url-test`.(美国0)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=PROXY`select`[]香港`[]美国`.*
 custom_proxy_group=苹果`select`[]DIRECT`[]PROXY
 custom_proxy_group=微软`select`[]DIRECT`[]PROXY
