--- a/config.ini
+++ b/config.ini
@@ -1,16 +1,22 @@
-surge_ruleset=苹果,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
-surge_ruleset=微软,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
-surge_ruleset=国内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-surge_ruleset=国内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
-surge_ruleset=国外,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
-surge_ruleset=最终,[]FINAL
+surge_ruleset=Apple,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
+surge_ruleset=Microsoft,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
+surge_ruleset=Domestic,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+surge_ruleset=Domestic,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+surge_ruleset=Domestic,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
+surge_ruleset=Domestic,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
+surge_ruleset=Domestic,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+surge_ruleset=Domestic,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/UnBan.list
+surge_ruleset=Overseas,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+surge_ruleset=Overseas,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
+surge_ruleset=Overseas,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+surge_ruleset=Final,[]FINAL
 
-custom_proxy_group=PROXY`select`.*
-custom_proxy_group=苹果`select`[]DIRECT`[]PROXY
-custom_proxy_group=微软`select`[]DIRECT`[]PROXY
-custom_proxy_group=国内`select`[]DIRECT`[]PROXY
-custom_proxy_group=国外`select`[]DIRECT`[]PROXY
-custom_proxy_group=最终`select`[]DIRECT`[]PROXY
+custom_proxy_group=PROXY`select`.(|)
+custom_proxy_group=Apple`select`[]DIRECT`[]PROXY
+custom_proxy_group=Microsoft`select`[]DIRECT`[]PROXY
+custom_proxy_group=Domestic`select`[]DIRECT`[]PROXY
+custom_proxy_group=Overseas`select`[]DIRECT`[]PROXY
+custom_proxy_group=Final`select`[]DIRECT`[]PROXY
 
 enable_rule_generator=true
 overwrite_original_rules=true
