--- a/config.ini
+++ b/config.ini
@@ -11,7 +11,7 @@ surge_ruleset=Overseas,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/
 surge_ruleset=Overseas,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 surge_ruleset=Final,[]FINAL
 
-custom_proxy_group=PROXY`select`.(|)
+custom_proxy_group=PROXY`select`.*
 custom_proxy_group=Apple`select`[]DIRECT`[]PROXY
 custom_proxy_group=Microsoft`select`[]DIRECT`[]PROXY
 custom_proxy_group=Domestic`select`[]DIRECT`[]PROXY
