--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,11 @@
 surge_ruleset=Apple,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
-surge_ruleset=Microsoft,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 surge_ruleset=Domestic,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 surge_ruleset=Domestic,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 surge_ruleset=Domestic,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 surge_ruleset=Domestic,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 surge_ruleset=Domestic,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 surge_ruleset=Domestic,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/UnBan.list
+surge_ruleset=Overseas,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 surge_ruleset=Overseas,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 surge_ruleset=Overseas,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
 surge_ruleset=Overseas,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
@@ -13,7 +13,6 @@ surge_ruleset=Final,[]FINAL
 
 custom_proxy_group=PROXY`select`.*
 custom_proxy_group=Apple`select`[]DIRECT`[]PROXY
-custom_proxy_group=Microsoft`select`[]DIRECT`[]PROXY
 custom_proxy_group=Domestic`select`[]DIRECT`[]PROXY
 custom_proxy_group=Overseas`select`[]DIRECT`[]PROXY
 custom_proxy_group=Final`select`[]DIRECT`[]PROXY
