--- a/config.ini
+++ b/config.ini
@@ -12,10 +12,11 @@ surge_ruleset=Overseas,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/
 surge_ruleset=Final,[]FINAL
 
 custom_proxy_group=PROXY`select`.*
-custom_proxy_group=Apple`select`[]DIRECT`[]PROXY
-custom_proxy_group=Domestic`select`[]DIRECT`[]PROXY
-custom_proxy_group=Overseas`select`[]DIRECT`[]PROXY
-custom_proxy_group=Final`select`[]DIRECT`[]PROXY
+custom_proxy_group=PROXY_Auto`url-test`.*`http://www.gstatic.com/generate_204`300
+custom_proxy_group=Apple`select`[]DIRECT`[]PROXY`[]PROXY_Auto
+custom_proxy_group=Domestic`select`[]DIRECT`[]PROXY`[]PROXY_Auto
+custom_proxy_group=Overseas`select`[]DIRECT`[]PROXY`[]PROXY_Auto
+custom_proxy_group=Final`select`[]DIRECT`[]PROXY`[]PROXY_Auto
 
 enable_rule_generator=true
 overwrite_original_rules=true
